# stack-simple

./: .dockerignore  .env  .gitignore  Makefile  app.dockerfile  app.production.dockerignore  docker-compose.yaml  pyproject.toml
app/: main.py  pyproject.toml
app/adapters/repositories/: base.py  user.py
app/core/: config.py  db.py
app/domain/models/: user.py
app/tests/integration/: test_repositories.py
infra/docker/: app.dockerfile
infra/local/: app.dockerfile  app.local.dockerfile  docker-compose.yaml
infra/production/: app.production.dockerfile
infra/terraform/: .terraform.lock.hcl  main.tf  variables.tf
