[project]
name = "stack-simple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "psycopg[binary]>=3.2.3",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
